--- a/servise.html
+++ b/servise.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href='https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,900&display=swap'
@@ -22,13 +22,13 @@
 </head>
 
 <body>
-    
+
     <header class="header">
         <div class="header_top">
             <div class="container">
                 <div class="header_contacts">
                     <a class="header_phone" href="tel:380963092145">+38 (096) 309 21 45 </a>
-                    <a class="header_email" href="#">layout585@gmail.com</a>
+                    <a class="header_adress" href="#">Киев, ул.Пушиной, 1</a>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">Free
                         consultation</a>
                 </div>
@@ -64,82 +64,75 @@
                                     <li><a href="servise.html">Пункт 2 подменю</a></li>
                                     <li><a href="servise.html">Пункт 3 подменю</a></li>
                                 </ul>
-                                <li><a href="" class="mark">Windows</a>
-                                    <i class="triangle"></i>
-                                    <ul class="sub-nav">
-                                        <li><a href="servise.html">Пункт 1 подменю</a></li>
-                                        <li><a href="servise.html">Пункт 2 подменю</a></li>
-                                        <li><a href="servise.html">Пункт 3 подменю</a></li>
-                                    </ul>
-                                </li>
+                            <li><a href="" class="mark">Windows</a>
+                                <i class="triangle"></i>
+                                <ul class="sub-nav">
+                                    <li><a href="servise.html">Пункт 1 подменю</a></li>
+                                    <li><a href="servise.html">Пункт 2 подменю</a></li>
+                                    <li><a href="servise.html">Пункт 3 подменю</a></li>
+                                </ul>
+                            </li>
                             <li class="menu_link"><a href="contact.html">Contact</a></li>
-
                         </ul>
-
-
-
-
-
                     </nav>
-                    
                 </div>
                 <div id="menu-container">
                     <div id="menu-wrapper">
-                       <div id="hamburger-menu"><span></span><span></span><span></span></div>
-                       <!-- hamburger-menu -->
+                        <div id="hamburger-menu"><span></span><span></span><span></span></div>
+                        <!-- hamburger-menu -->
                     </div>
                     <!-- menu-wrapper -->
                     <ul class="menu-list accordion">
-                         <!-- accordion-toggle -->
-                         <li id="nav2"  class="menu-submenu"> 
+                        <!-- accordion-toggle -->
+                        <li id="nav2" class="menu-submenu">
                             <a class="menu-link" href="index.html">Home</a>
-                         </li>
-                         <li id="nav2"  class="menu-submenu"> 
+                        </li>
+                        <li id="nav2" class="menu-submenu">
                             <a class="menu-link" href="about.html">About us</a>
-                         </li>
-                         <!-- accordion-toggle -->
-                       <li id="nav1" class="toggle accordion-toggle"> 
-                          <span class="icon-plus"></span>
-                          <a class="menu-link" href="#">Siding</a>
-                       </li>
-                       <!-- accordion-toggle -->
-                       <ul class="menu-submenu accordion-content">
-                          <li><a class="head" href="#">Submenu1</a></li>
-                          <li><a class="head" href="#">Submenu2</a></li>
-                          <li><a class="head" href="#">Submenu3</a></li>
-                       </ul>
-                       <!-- menu-submenu accordon-content-->
-                       <li id="nav2" class="toggle accordion-toggle"> 
-                          <span class="icon-plus"></span>
-                          <a class="menu-link" href="#">Roofing</a>
-                       </li>
-                       <!-- accordion-toggle -->
-                       <ul class="menu-submenu accordion-content">
-                          <li><a class="head" href="#">Submenu1</a></li>
-                          <li><a class="head" href="#">Submenu2</a></li>
-                          <li><a class="head" href="#">Submenu4</a></li>
-                       </ul>
-                       <!-- menu-submenu accordon-content-->
-                            <li id="nav3" class="toggle accordion-toggle"> 
-                          <span class="icon-plus"></span>
-                          <a class="menu-link" href="#">Windows</a>
-                       </li>
-                       <!-- accordion-toggle -->
-                       <ul class="menu-submenu accordion-content">
-                          <li><a class="head" href="#">Submenu1</a></li>
-                          <li><a class="head" href="#">Submenu2</a></li>
-                          <li><a class="head" href="#">Submenu3</a></li>
+                        </li>
+                        <!-- accordion-toggle -->
+                        <li id="nav1" class="toggle accordion-toggle">
+                            <span class="icon-plus"></span>
+                            <a class="menu-link" href="#">Siding</a>
+                        </li>
+                        <!-- accordion-toggle -->
+                        <ul class="menu-submenu accordion-content">
+                            <li><a class="head" href="#">Submenu1</a></li>
+                            <li><a class="head" href="#">Submenu2</a></li>
+                            <li><a class="head" href="#">Submenu3</a></li>
+                        </ul>
+                        <!-- menu-submenu accordon-content-->
+                        <li id="nav2" class="toggle accordion-toggle">
+                            <span class="icon-plus"></span>
+                            <a class="menu-link" href="#">Roofing</a>
+                        </li>
+                        <!-- accordion-toggle -->
+                        <ul class="menu-submenu accordion-content">
+                            <li><a class="head" href="#">Submenu1</a></li>
+                            <li><a class="head" href="#">Submenu2</a></li>
+                            <li><a class="head" href="#">Submenu4</a></li>
+                        </ul>
+                        <!-- menu-submenu accordon-content-->
+                        <li id="nav3" class="toggle accordion-toggle">
+                            <span class="icon-plus"></span>
+                            <a class="menu-link" href="#">Windows</a>
+                        </li>
+                        <!-- accordion-toggle -->
+                        <ul class="menu-submenu accordion-content">
+                            <li><a class="head" href="#">Submenu1</a></li>
+                            <li><a class="head" href="#">Submenu2</a></li>
+                            <li><a class="head" href="#">Submenu3</a></li>
 
-                       </ul>
-                       <li id="nav2" class="menu-submenu"> 
-                        <a class="menu-link" href="contact.html">Contact</a>
-                     </li>
+                        </ul>
+                        <li id="nav2" class="menu-submenu">
+                            <a class="menu-link" href="contact.html">Contact</a>
+                        </li>
 
-                       <!-- menu-submenu accordon-content-->
+                        <!-- menu-submenu accordon-content-->
                     </ul>
                     <!-- menu-list accordion-->
-                 </div>
-                 <!-- menu-container -->
+                </div>
+                <!-- menu-container -->
             </div>
         </div>
     </header>
@@ -167,7 +160,6 @@
                     <figure class="image"><img src="img/metal_1.jpg" alt=""></figure>
                 </div>
             </div>
-
             <!-- Lower Content -->
             <div class="lower-content">
                 <div class="row">
@@ -189,33 +181,28 @@
                                 pursues nyone who loves or pursues.</p>
                             <!-- Two Column -->
                             <div class="two-column">
-                                <div class="row">
-                                    <div class="image-column col-xl-6 col-lg-12 col-md-12">
-                                        <figure class="image"><img src="img/metal_2.jpg" alt=""></a></figure>
-                                    </div>
-                                    <div class="text-column col-xl-6 col-lg-12 col-md-12">
-                                        <ul class="list-style-one">
-                                            <li>Engine oil level should be regularly checked Tyres have a minimum of
-                                                1.6mm of tread.</li>
-                                            <li>Ensure that the electrolyte level is correct Never remove the radiator
-                                                when the engine.</li>
-                                            <li>Ensure that your vehicle's brake fluid is full Engine oil level should
-                                                be regularly checked.</li>
-                                            <li>Sngine oil level should be regularly checked Tyres have a minimum of
-                                                1.6mm of tread. E lectrolyte level is correct Never remove.</li>
+                                <div class="image-column">
+                                    <figure class="image"><img src="img/metal_2.jpg" alt=""></a></figure>
+                                </div>
+                                <div class="text-column col-xl-6 col-lg-12 col-md-12">
+                                    <h3>What We Did</h3>
+                                    <ul class="list-style-one">
+                                        <li>Engine oil level should be regularly checked Tyres have a minimum of
+                                            1.6mm of tread.</li>
+                                        <li>Ensure that the electrolyte level is correct Never remove the radiator
+                                            when the engine.</li>
+                                        <li>Ensure that your vehicle's brake fluid is full Engine oil level should
+                                            be regularly checked.</li>
+                                        <li>Sngine oil level should be regularly checked Tyres have a minimum of
+                                            1.6mm of tread. E lectrolyte level is correct Never remove.</li>
 
-                                        </ul>
-                                    </div>
-
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
-
         </div>
     </section>
     </div>
@@ -233,8 +220,7 @@
                         </a>
                         <ul class="footer_list">
                             <li><a class="footer_phone" href="tel:380963092145">+38 (096) 309 21 45</a></li>
-                            <li><a class="footer_email" href="#">layout585@gmail.com</a></li>
-                            <li><a class="footer_adress" href="#">Киев, ул.Пушиной, 1</a></li>
+                            <li<a class="header_adress" href="#">Киев, ул.Пушиной, 1</a></li>
                         </ul>
                     </div>
                     <div class="footer_map">
