--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="robots" content="noindex, nofollow" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="header_contacts">
                     <a class="header_phone" href="tel:380963092145">+38 (096) 309 21 45 </a>
-                    <a class="header_email" href="#">layout585@gmail.com</a>
+                    <a class="header_adress" href="#">Киев, ул.Пушиной, 1</a>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">Free
                         consultation</a>
                 </div>
@@ -371,7 +371,7 @@
                         </a>
                         <ul class="footer_list">
                             <li><a class="footer_phone" href="tel:380963092145">+38 (096) 309 21 45</a></li>
-                            <li><a class="footer_email" href="#">layout585@gmail.com</a></li>
+                            
                             <li><a class="footer_adress" href="#">Киев, ул.Пушиной, 1</a></li>
                         </ul>
                     </div>
