--- a/servise.html
+++ b/servise.html
@@ -97,9 +97,9 @@
                         </li>
                         <!-- accordion-toggle -->
                         <ul class="menu-submenu accordion-content">
-                            <li><a class="head" href="#">Submenu1</a></li>
-                            <li><a class="head" href="#">Submenu2</a></li>
-                            <li><a class="head" href="#">Submenu3</a></li>
+                            <li><a class="head" href="servise.html">Submenu1</a></li>
+                            <li><a class="head" href="servise.html">Submenu1</a></li>
+                            <li><a class="head" href="servise.html">Submenu1</a></li>
                         </ul>
                         <!-- menu-submenu accordon-content-->
                         <li id="nav2" class="toggle accordion-toggle">
@@ -108,9 +108,9 @@
                         </li>
                         <!-- accordion-toggle -->
                         <ul class="menu-submenu accordion-content">
-                            <li><a class="head" href="#">Submenu1</a></li>
-                            <li><a class="head" href="#">Submenu2</a></li>
-                            <li><a class="head" href="#">Submenu4</a></li>
+                            <li><a class="head" href="servise.html">Submenu1</a></li>
+                            <li><a class="head" href="servise.html">Submenu1</a></li>
+                            <li><a class="head" href="servise.html">Submenu1</a></li>
                         </ul>
                         <!-- menu-submenu accordon-content-->
                         <li id="nav3" class="toggle accordion-toggle">
@@ -119,9 +119,9 @@
                         </li>
                         <!-- accordion-toggle -->
                         <ul class="menu-submenu accordion-content">
-                            <li><a class="head" href="#">Submenu1</a></li>
-                            <li><a class="head" href="#">Submenu2</a></li>
-                            <li><a class="head" href="#">Submenu3</a></li>
+                            <li><a class="head" href="servise.html">Submenu1</a></li>
+                            <li><a class="head" href="servise.html">Submenu1</a></li>
+                            <li><a class="head" href="servise.html">Submenu1</a></li>
 
                         </ul>
                         <li id="nav2" class="menu-submenu">
@@ -154,6 +154,12 @@
     </section>
     <section class="project-detail">
         <div class="container">
+            <div class="text-column col-lg-12 col-md-12 col-sm-12">
+                <div class="inner-column">
+                    <h1>What We Did</h1>
+                </div>
+            </div>
+
             <!-- Upper Box -->
             <div class="upper-box">
                 <div class="single-item-carousel owl-carousel owl-theme">
@@ -197,8 +203,32 @@
                                             1.6mm of tread. E lectrolyte level is correct Never remove.</li>
 
                                     </ul>
+                                    <ul class="list-style-one">
+                                        <li>Engine oil level should be regularly checked Tyres have a minimum of
+                                            1.6mm of tread.</li>
+                                        <li>Ensure that the electrolyte level is correct Never remove the radiator
+                                            when the engine.</li>
+                                        <li>Ensure that your vehicle's brake fluid is full Engine oil level should
+                                            be regularly checked.</li>
+                                        <li>Sngine oil level should be regularly checked Tyres have a minimum of
+                                            1.6mm of tread. E lectrolyte level is correct Never remove.</li>
+
+                                    </ul>
                                 </div>
+
                             </div>
+                        </div>
+                    </div>
+                    <div class="text-column col-lg-12 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h3>What We Did</h3>
+                            <p>Pleasure and praising pain was born and I will give you a complete account of the
+                                systems, and expound the actually teachings of the great explorer of the truth, the
+                                master-builder of human uts happiness. No one rejects, dislikes, or avoids pleasure
+                                itself, because it is pleasure, but because those who do not know how to pursue pleasure
+                                rationally encounter that are extremely painful. Nor again is there anyone who loves or
+                                pursues or desires to obtain pain of itself pursues or desires to obtain pain of itself.
+                            </p>
                         </div>
                     </div>
                 </div>
