--- a/about.html
+++ b/about.html
@@ -105,9 +105,9 @@
                        </li>
                        <!-- accordion-toggle -->
                        <ul class="menu-submenu accordion-content">
-                          <li><a class="head" href="#">Submenu1</a></li>
-                          <li><a class="head" href="#">Submenu2</a></li>
-                          <li><a class="head" href="#">Submenu3</a></li>
+                          <li><a class="head" href="servise.html">Submenu1</a></li>
+                          <li><a class="head" href="servise.html">Submenu2</a></li>
+                          <li><a class="head" href="servise.html">Submenu3</a></li>
                        </ul>
                        <!-- menu-submenu accordon-content-->
                        <li id="nav2" class="toggle accordion-toggle"> 
@@ -116,9 +116,9 @@
                        </li>
                        <!-- accordion-toggle -->
                        <ul class="menu-submenu accordion-content">
-                          <li><a class="head" href="#">Submenu1</a></li>
-                          <li><a class="head" href="#">Submenu2</a></li>
-                          <li><a class="head" href="#">Submenu4</a></li>
+                          <li><a class="head" href="servise.html">Submenu1</a></li>
+                          <li><a class="head" href="servise.html">Submenu2</a></li>
+                          <li><a class="head" href="servise.html">Submenu4</a></li>
                        </ul>
                        <!-- menu-submenu accordon-content-->
                             <li id="nav3" class="toggle accordion-toggle"> 
@@ -127,9 +127,9 @@
                        </li>
                        <!-- accordion-toggle -->
                        <ul class="menu-submenu accordion-content">
-                          <li><a class="head" href="#">Submenu1</a></li>
-                          <li><a class="head" href="#">Submenu2</a></li>
-                          <li><a class="head" href="#">Submenu3</a></li>
+                          <li><a class="head" href="servise.html">Submenu1</a></li>
+                          <li><a class="head" href="servise.html">Submenu2</a></li>
+                          <li><a class="head" href="servise.html">Submenu3</a></li>
 
                        </ul>
                        <li id="nav2" class="menu-submenu"> 
